TAG: qcreports_db-6-0-25-3
TAG: qcreports_db-6-0-25-2
TAG: qcreports_db-6-0-25-1
DATE: 02/20/2025
STAFF: lec
wts2-1600/e4g-115/Marker Coordinate Load changes
#        modified:   weekly/MRK_C4AM_GeneModel.py

TAG: qcreports_db-6-0-24-16
DATE: 01/16/2025
STAFF: liangh
wts2-1599/e4g-113/Do PMID search to find unevaluated experiments associated with papers...
#        modified:   pwi/pwireports.txt
#        new file:   pwi/GXD_HTExperimentPMID.py 

TAG: qcreports_db-6-0-24-15
DATE: 11/19/2024
STAFF: lec
mirror_wget/bhmgiimsr01.jax.org.imsr_allStrains -> bhmgiimsr02lp.jax.org issue
#        modified:   Configuration.default

TAG: qcreports_db-6-0-24-14
DATE: 11/04/2024
STAFF: lec
wts2-1539/e4g-57/GXD RNA-Seq Type/Schema/Migration
#        modified:   pwi/GXD_HTSampleAnnotations.py
#        new file:   mgd/GXD_HTSampleNoRNAType.py

TAG: qcreports_db-6-0-24-13
DATE: 10/29/2024
STAFF: lec
wts2-1571/e4g-54/tweak WF_SupplementalData.rpt so that it excludes gxdht only papers
#        modified:   mgd/WF_SupplementalData.py

TAG: qcreports_db-6-0-24-13
TAG: qcreports_db-6-0-24-12
TAG: qcreports_db-6-0-24-11
TAG: qcreports_db-6-0-24-10
TAG: qcreports_db-6-0-24-9
TAG: qcreports_db-6-0-24-8
DATE: 10/25/2024
STAFF: lec
wts2-1565/e4g-39/GXD HT: Missing PMIDs
#       new file:   mgd/GXD_HTPubMed.py

TAG: qcreports_db-6-0-24-7
DATE: 10/22/2024
STAFF: lec
wts2-1567/e4g-42/change sort order of custom report: GXD HT Experiment notes displayed to the public
#       modified:   pwi/GXD_HTExperimentCuratedNote.py

TAG: qcreports_db-6-0-24-6
DATE: 10/08/2024
STAFF: lec
wts2-1563/e4g-29/tweak to existing Unused image panes from full coded references QC (GXD #8)
#       modified:   mgd/GXD_ImagesUnused.py

TAG: qcreports_db-6-0-24-5
DATE: 08/28/2024
STAFF: lec
wts2-1377/fl2-960/QC reports for MP-HP match tool
#       new file:   weekly/VOC_OntologyExactMatch.py

TAG: qcreports_db-6-0-24-4
DATE: 08/26/2024
STAFF: lec